# smplxpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  version.hh.in
cmake/: FetchEigen.cmake  FetchFmt.cmake  FetchSpdlog.cmake  FetchTriengine.cmake  FetchZlib.cmake  LibConfig.cmake.in
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt
examples/common/src/cxlib/: cxlib_defs.h
examples/common/src/cxlib/utils/: bit_cast.hh  debug_assert.hh  debug_panic.hh  logger.hh  path_utils.hh  polling_thread.hh  spin_lock.hh  string_codecvt.hh  string_format.hh
examples/example-amass/: CMakeLists.txt
examples/example-amass/samples/: CMU_07_01.npz  CMU_13_42.npz
examples/example-amass/src/: example_amass_main.cc  smpl_sequence.cc  smpl_sequence.hh  smpl_sequence_config.hh
examples/example-basic/: CMakeLists.txt
examples/example-basic/src/: example_basic_main.cc
include/smplx/: smplx.hh  util.hh
include/smplx/internal/: cuda_util.cuh
models/: README.md
src/: body.cc  model.cc
src/cuda/: body.cu  model.cu
src/smplx/: body.cc  defs.hh  model.cc  model_config.hh  util_cbor.cc  util_cbor.hh
src/smplx/cuda/: model.cu
src/smplxpp/: body.cc  defs.hh  model.cc  model_config.hh  smplx.hh  util.hh  util_cbor.cc  util_cbor.hh
src/smplxpp/cuda/: body.cu  model.cu
src/smplxpp/internal/: cuda_util.cuh
tools/smpl2cbor/: .gitignore  cbor_utils.py  pyproject.toml  smpl2cbor.py
